2005-07-16  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document _ignore_update_rowcount.

	* src/pydo/base.py (PyDO): adding _ignore_update_rowcount
	attribute so that if the driver doesn't return a correct rowcount
	-- for instance, for an updateable view, as I've seen with
	postgres -- update can still be made to work.

	* tests/test_base.py (test_update2): update test with out-of-sync
	object.

	* src/pydo/base.py (PyDO._update_raw): fail if update doesn't
	affect one row.

	* tests/test_base.py (test_unique4): test that all information
	passed to getUnique is used (related to discussion of berlios bug
	#4530).

2005-07-08  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: at a user's request, adding a mention to the
	manual that PyDO requires Python 2.4.  (berlios bug #4472)

2005-07-07  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_operators.py (test_converter2): test based on Adam
	Ward's bug report (berlios #4468).

	* src/pydo/base.py (PyDO._processWhere): other half of bug fix for
	#4468 -- call setConverter on SQLOperator, not x.converter=c,
	which doesn't recurse.

	* tests/test_operators.py (test_converter1): test for raw strings
	with embedded single quotes, with and without a converter.
	Partial test for berlios bug # 4468.

	* src/pydo/operators.py (SQLOperator._convert, sqlquote): handles
	raw strings better when there is no BindingConverter.  Partial fix
	for berlios bug #4468.

2005-07-06  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_fields.py (test_getattr1): test for
	getattr(myPyDOSubclass, fieldname).

	* src/pydo/field.py (Field.__get__): deal with the case of obj
	being None (for the sake of pydoc, which tries to call the
	descriptor on the class object).  Thanks to Adam Ward for bug
	report. 

2005-07-05  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/operators.py (_repr_single_and_or): hack so that AND
	and OR will work with a single argument (berlios bug #4448).
